heading , navbar and home section both are done for mobile

--- a/index.html
+++ b/index.html
@@ -5,16 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amani Digital Marketing Est.</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width:600px)"
+      href="./css/mobile.css"
+    />
+    <link
+      rel="stylesheet"
+      media="screen and (min-width:801px)"
+      href="./css/style.css"
+    />
   </head>
   <body>
+    <!-- heading start  -->
+    <div class="heading">
+      <h1>Amani Digital Marketing Est.</h1>
+    </div>
+    <!-- heading end  -->
+
     <!-- navbar start  -->
     <nav>
       <!-- <div class="container"> -->
-      <div class="nav_coloum">SEO & Marketing</div>
-      <div class="nav_coloum">Keywords Results</div>
-      <div class="nav_coloum">Google Analytics</div>
-      <div class="nav_coloum">Off Page SEO</div>
+      <div class="nav_coloum"><p>SEO & Marketing</p></div>
+      <div class="nav_coloum"><p>Keywords Results</p></div>
+      <div class="nav_coloum"><p>Google Analytics</p></div>
+      <div class="nav_coloum"><p>Off Page SEO</p></div>
       <!-- </div> -->
     </nav>
     <!-- navbar end  -->
