all are done for mobile view

--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
         <img src="./images/image2-home6.png" alt="portfolio_img" />
       </div>
       <div class="portfolio_text">
-        <h1>What They Say About Our Company?</h1>
+        <div class="portfolio_text_heading">
+          <h1>What They Say About Our Company?</h1>
+        </div>
         <p>
           “After cycling through multiple SEO companies and seeing no results, I
           finally came across SEO.Choosing to work with Onum is hands down one
@@ -157,8 +159,10 @@
     <footer>
       <ul>
         <li>+407 2 399 2142</li>
-        <li>1301/29, MAI Tower, Dubai, United Arab Emirates</li>
+
         <li>amanidigitalmarketingest@gmail.com</li>
+
+        <li>1301/29, MAI Tower, Dubai, United Arab Emirates</li>
       </ul>
     </footer>
   </body>
