change some design

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           finally came across SEO.Choosing to work with Onum is hands down one
           of the best business investment decisions I have ever made.”
         </p>
-        <p>Taylor Green, Client of Company</p>
+        <p><b>Taylor Green, Client of Company</b></p>
       </div>
       <!-- </div> -->
     </section>
