--- a/shop.html
+++ b/shop.html
@@ -5,69 +5,103 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amani Digital Marketing Est./shop</title>
-    <link rel="stylesheet" href="./css/shop.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      media="screen and (min-width:801px)"
+      href="./css/shop.css"
+    />
+    <link
+      rel="stylesheet"
+      media="screen and (min-width:801px)"
+      href="./css/style.css"
+    />
   </head>
   <body>
-    <div class="service-bg">
-      <div class="service-content">
-        <div class="service-heading">
-          <p>What we do</p>
-          <h3>Our Services</h3>
-        </div>
-        <div class="service-item-content">
-          <div class="service-item mb">
-            <h4>PPC Advertising</h4>
-            <p>
-              Target your ideal search phrases and get found at the top of
-              Google’s search results. PPC allows you.
-            </p>
-          </div>
-          <div class="service-item m30 mb">
-            <h4>Web Development</h4>
-            <p>
-              Your website has to impress your visitors within just a few
-              seconds. If it runs slow, if it feels outdated.
-            </p>
-          </div>
-          <div class="service-item mb">
-            <h4>App Development</h4>
-            <p>
-              Mobile application development is the process of creating software
-              applications that run on a mobile device, and a typical mobile
-              application utilizes a network connection to work with remote
-              computing resources.
-            </p>
-          </div>
-          <div class="service-item">
-            <h4>SEO Optimization</h4>
-            <p>
-              The practice of orienting your website to rank higher on a search
-              engine results page (SERP) so that you receive more traffic.
-            </p>
-          </div>
-          <div class="service-item m30">
-            <h4>App Development</h4>
-            <p>
-              Mobile application development is the process of creating software
-              applications that run on a mobile device, and a typical mobile
-              application utilizes a network connection to work with remote
-              computing resources.
-            </p>
-          </div>
-          <div class="service-item">
-            <h4>Content writing</h4>
-            <p>
-              The process of planning, writing and editing web content,
-              typically for digital marketing purposes. It can include writing
-              blog posts and articles,as well as content for specific platforms,
-              such as tweetstorms on Twitter or text posts on Reddit.
-            </p>
-          </div>
-        </div>
+    <div class="main_box">
+      <div class="box_one">
+        <h1>Content writing</h1>
+        <p>
+          In the realm of digital marketing, content writing is the process of
+          producing content, often for marketing purposes. Although you might
+          associate this definition with things like blog posts and website
+          landing pages, it can also include any form of content that requires
+          planning, writing and editing.
+          <br />
+          <br />
+          Content writing is the process of planning, writing, and editing web
+          content, typically for digital marketing purposes with the aim of
+          solving a problem for a specific audience.
+        </p>
+      </div>
+      <div class="box_two">
+        <img src="./images/content-writing.jpg" alt="" />
       </div>
     </div>
-    <!--    service end-->
+
+    <!-- 2nd row -->
+    <div class="main_box">
+      <div class="box_two">
+        <img src="./images/Social Media Marketing.jpg" alt="flower" />
+      </div>
+      <div class="box_one">
+        <h1>Social Media Marketing</h1>
+        <p>
+          Social media marketing is the use of social media websites and
+          platforms to promote products and services and connect with audiences.
+          Social media marketing (SMM) can help in building your company's
+          brand, driving website traffic, and increasing sales.
+          <br />
+          <br />
+
+          What is Social Media? Social media refers to the means of interactions
+          among people in which they create, share, and/or exchange information
+          and ideas in virtual communities and networks.
+        </p>
+      </div>
+    </div>
+
+    <!-- third line -->
+    <div class="main_box">
+      <div class="box_one">
+        <h1>App Development</h1>
+        <p>
+          Application developers write software programs for use across mobile
+          operating systems, including Apple, Android, and Windows devices. Once
+          applications are created, application developers are also responsible
+          for testing the application and providing updates whenever necessary.
+          <br />
+          <br />
+
+          The easy answer is: App developers create mobile and computer apps and
+          software programmers create, test programs or systems and fix bugs if
+          and when they encounter them.
+        </p>
+      </div>
+      <div class="box_two">
+        <img src="./images/appdev.jpg" alt="" />
+      </div>
+    </div>
+    <!-- fourth row -->
+    <div class="main_box">
+      <div class="box_two">
+        <img src="./images/seoshop.avif" alt="flower" />
+      </div>
+      <div class="box_one">
+        <h1>SEO Optimization</h1>
+        <p>
+          Social media marketing is the use of social media websites and
+          platforms to promote products and services and connect with audiences.
+          Social media marketing (SMM) can help in building your company's
+          brand, driving website traffic, and increasing sales.
+          <br />
+          <br />
+
+          What is Social Media? Social media refers to the means of interactions
+          among people in which they create, share, and/or exchange information
+          and ideas in virtual communities and networks.
+        </p>
+      </div>
+    </div>
 
     <footer>
       <ul>
