Add heading and change hover color

--- a/shop.html
+++ b/shop.html
@@ -17,6 +17,9 @@
     />
   </head>
   <body>
+    <div class="heading">
+      <h1>Amani Digital Marketing Est.</h1>
+    </div>
     <div class="main_box">
       <div class="box_one">
         <h1>Content writing</h1>
