--- a/shop.html
+++ b/shop.html
@@ -7,6 +7,11 @@
     <title>Amani Digital Marketing Est./shop</title>
     <link
       rel="stylesheet"
+      media="screen and (max-width:800px)"
+      href="./css/mobile-shop.css"
+    />
+    <link
+      rel="stylesheet"
       media="screen and (min-width:801px)"
       href="./css/shop.css"
     />
@@ -14,6 +19,11 @@
       rel="stylesheet"
       media="screen and (min-width:801px)"
       href="./css/style.css"
+    />
+    <link
+      rel="stylesheet"
+      media="screen and (max-width:800px)"
+      href="./css/mobile.css"
     />
   </head>
   <body>
@@ -109,8 +119,9 @@
     <footer>
       <ul>
         <li>+407 2 399 2142</li>
-        <li>1301/29, MAI Tower, Dubai, United Arab Emirates</li>
+
         <li>amanidigitalmarketingest@gmail.com</li>
+        <li>1301/29, MAI Tower, Dubai, United Arab Emirates</li>
       </ul>
     </footer>
   </body>
